# $Id$

New in 2.4.0
- Core
  + Various long-standing bugs in IMCC were fixed
  + STRINGs are now immutable.
- Deprecations
  + Tools to distribute on CPAN were removed
- Tests
  + Many tests for the extend/embed interface were added
  + done_testing() is now implemented in Test::More
- Miscellaneous
  + Six Parrot-related projects accepted to GSoC

New in 2.3.0
- Core
  + Allow passing parameters to the dynamic linker ('dlopen' improved)
  + loadlib opcode added
  + Calling conventions are now much more consistent, and follows natural
    semantics of handling arguments and return values
  + Recursive make for src/dynpmc removed
  + Datatype STRINGNULL for a single Null STRING added
  + config_lib.pasm replaced with config_lib.pir
- Platforms
  + Improved handling of new compilers
  + Cygwin packages will be updated again with Parrot releases
  + Fedora packages add desktop files
  + gzip and bzip2 compressed tar files for releases
- Tools
  + tapir executable added; tapir is a TAP test harness
  + Added TAP options --merge --ignore-exit
- Miscellaneous
  + 3 month cycle for supported releases
  + Review and vote of GSoC applications

New in 2.2.0
- Core changes
  + Most internal allocations now use the GC
  + RNG non-randomnes fixes
  + Elimination of much dead code
- API changes
  + PMCs can now be initialized from an int
  + Many legacy ops are removed
- Platforms
  + Sun cc and Intel icc support have been restored
  + Compiler invocation no longer goes through a Perl script
- Tools
  + NCI thunks are now generated by self-hosted PIR code

New in 2.1.0
- Core changes
  + GC performance and encapsulation were greatly improved.
  + PMC freeze refactored.
  + More Makefile and build improvements.
- API Changes
  + The Array PMC was removed.
  + Several deprecated vtables were removed.
  + The OrderedHash PMC was substantialy improved.
- Platforms
  + Packaging improvements on some operating systems.
- Tools
  + Some cases in pbc_merge are now handled.