@@ -1,6 +1,6 @@
 # ex: set ro:
 # $Id$
-# generated by tools/dev/mk_manifest_and_skip.pl Sat May 15 05:10:05 2010 UT
+# generated by tools/dev/mk_manifest_and_skip.pl Sat May 15 08:19:58 2010 UT
 #
 # This file should contain a transcript of the svn:ignore properties
 # of the directories in the Parrot subversion repository. (Needed for
@@ -89,6 +89,10 @@
 ^parrot-nqp\.c/
 ^parrot-nqp\.pbc$
 ^parrot-nqp\.pbc/
+^parrot-prove$
+^parrot-prove/
+^parrot-prove\..*$
+^parrot-prove\..*/
 ^parrot\.ilk$
 ^parrot\.ilk/
 ^parrot\.iss$
@@ -131,10 +135,6 @@
 ^pirc/
 ^tags$
 ^tags/
-^tapir$
-^tapir/
-^tapir\..*$
-^tapir\..*/
 ^temp\.file$
 ^temp\.file/
 ^test$
